--- a/address-book.html
+++ b/address-book.html
@@ -10,7 +10,9 @@
   <body>
     <div class="container">
       <h1>Address book</h1>
-       <div class="row">
+
+      <div class="row">
+
         <div class="col-md-6">
           <h2>Add a contact:</h2>
           <form id="new-contact">
@@ -22,6 +24,7 @@
               <label for="new-last-name">Last name</label>
               <input type="text" class="form-control" id="new-last-name">
             </div>
+
             <div id="new-addresses">
               <div class="new-address">
                 <div class="form-group">
@@ -50,24 +53,18 @@
           </ul>
         </div>
 
-            <div class="col-md-6">
-                <div id="show-contact">
-                  <h2></h2>
-              
-                  <p>First name: <span class="first-name"></span></p>
-                  <p>Last name: <span class="last-name"></span></p>
-                </div>
-              </div>  
-              
+        <div class="col-md-6">
+          <div id="show-contact">
+            <h2></h2>
+            <p>First name: <span class="first-name"></span></p>
+            <p>Last name: <span class="last-name"></span></p>
+            <p>Addresses:</p>
+            <ul id="addresses">
 
-            <button type="submit" class="btn">Add</button>
-          </form>
-
-          <h2>Contacts:</h2>
-          <ul id="contacts">
-
-          </ul>
+            </ul>
+          </div>
         </div>
+
       </div>
     </div>
   </body>
